src/objects/Historique_Transporteur_Associe__c.object
<CustomObject>
    <description>Pour historiser les activations/désactivations de transporteurs.</description>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_du_statut__c</fullName>
        <label>Date de fin du statut</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_modification__c</fullName>
        <label>Date de modification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Etat_du_statut__c</fullName>
        <label>Etat du statut</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifie_par__c</fullName>
        <label>Modifié par</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motif__c</fullName>
        <label>Motif</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operateur__c</fullName>
        <description>Ce champ permet de gérer la visibilité des données d&apos;historique des transporteurs entre les opérateurs.</description>
        <label>Opérateur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_OPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_active_desactive__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activé</fullName>
                </value>
                <value>
                    <fullName>Désactivé</fullName>
                </value>
                <value>
                    <fullName>Exclus</fullName>
                </value>
                <value>
                    <fullName>Interdit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transporteur_associe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporteur associé</label>
        <referenceTo>Transporteur_Associe__c</referenceTo>
        <relationshipLabel>Historique des transporteurs</relationshipLabel>
        <relationshipName>Historiques_des_transporteurs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Historique des transporteurs</label>
    <nameField>
        <displayFormat>HDT-{0000}</displayFormat>
        <label>Numéro d&apos;Historique des transporteurs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques des transporteurs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>